# fuzzc

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: api.h  distance.h  macros.h  match.h
src/: api.c  distance.c  match.c
tests/: main.c  test_api.c  test_distance.c  tests.h
